--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Жданов Александр — DevOps Engineer</title>
-  <meta name="description" content="DevOps Engineer · Kubernetes · Docker · CI/CD · Monitoring" />
+  <meta name="description" content="DevOps Engineer · Kubernetes · Docker · CI/CD · Terraform · Monitoring" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <style>
@@ -131,8 +131,8 @@
     .job{margin-bottom:12px}
     .job h3{margin:0;font-size:16px}
     .job .org{color:var(--muted);font-size:13px;margin-top:6px}
-    .job ul{margin:10px 0 0 18px}
-    .job li{margin-bottom:6px}
+    .job ul{margin:10px 0 0 0; padding-left: 18px;}
+    .job li{margin-bottom:6px; line-height: 1.5;}
 
     .muted{color:var(--muted);font-size:13px}
 
@@ -181,14 +181,14 @@
       <div class="section">
         <h2>Ключевые навыки</h2>
         <div class="skills-grid">
-          <div class="skill-item">Linux: администрирование</div>
-          <div class="skill-item">Docker: контейнеризация</div>
-          <div class="skill-item">Kubernetes / Helm: деплой и управление</div>
-          <div class="skill-item">PostgreSQL: бэкап и восстановление</div>
-          <div class="skill-item">Nginx: конфигурация веб-слоя</div>
-          <div class="skill-item">Prometheus / Grafana: мониторинг</div>
-          <div class="skill-item">Bash: автоматизация</div>
-          <div class="skill-item">Ansible: конфигурация</div>
+          <div class="skill-item">Администрирование Linux</div>
+          <div class="skill-item">Контейнеризация (Docker)</div>
+          <div class="skill-item">Оркестрация (Kubernetes, Helm)</div>
+          <div class="skill-item">CI/CD (GitLab CI)</div>
+          <div class="skill-item">Инфраструктура как код (Terraform)</div>
+          <div class="skill-item">Мониторинг (Prometheus, Grafana)</div>
+          <div class="skill-item">Базы данных (PostgreSQL)</div>
+          <div class="skill-item">Веб-серверы (Nginx)</div>
         </div>
       </div>
 
@@ -199,19 +199,21 @@
           <div class="chip">Docker</div>
           <div class="chip">Kubernetes</div>
           <div class="chip">Helm</div>
+          <div class="chip">Terraform</div>
+          <div class="chip">GitLab CI/CD</div>
           <div class="chip">Nginx</div>
           <div class="chip">PostgreSQL</div>
           <div class="chip">Prometheus</div>
           <div class="chip">Grafana</div>
           <div class="chip">Bash</div>
           <div class="chip">Ansible</div>
-          <div class="chip">Git / GitLab</div>
+          <div class="chip">Git</div>
         </div>
       </div>
 
       <div class="section">
         <h2>Языки</h2>
-        <div class="muted">Русский — Родной<br>Английский — B2 (средне-продвинутый)</div>
+        <div class="muted">Русский — Родной<br>Английский — B2 (Средне-продвинутый)</div>
       </div>
     </aside>
 
@@ -219,13 +221,13 @@
       <div class="title-main">
         <div>
           <h1 class="fade-up">Жданов Александр</h1>
-          <div class="subtitle muted">DevOps Engineer</div>
+          <div class="subtitle muted">DevOps / Infrastructure Engineer</div>
         </div>
-        <div class="tag chip" aria-hidden>DevOps · CI/CD · Infra</div>
+        <div class="tag chip" aria-hidden>K8s · Docker · CI/CD · IaC</div>
       </div>
 
       <div class="summary fade-up" style="transition-delay:.03s">
-        DevOps-инженер с практическим опытом администрирования, автоматизации процессов и поддержки контейнеризированных сервисов. Умею работать с Docker и Kubernetes, настраивать Nginx, администрировать PostgreSQL, а также строить мониторинг на Prometheus и Grafana. Фокус на доступности и отказоустойчивости инфраструктуры: быстро анализирую проблемы и внедряю рабочие решения.
+        DevOps-инженер с опытом построения и поддержки отказоустойчивой инфраструктуры. Автоматизирую процессы развертывания и мониторинга, что позволяет повышать надежность и скорость delivery. Нацелен на создание масштабируемых и эффективных систем с использованием современных практик и инструментов.
       </div>
 
       <!-- experience inside right column -->
@@ -236,18 +238,19 @@
         </div>
 
         <article class="job">
-          <h3>Инженер по серверной инфраструктуре</h3>
-          <div class="org muted">СИБИНТЕК, ООО ИК — Москва · <a href="https://www.sibintek.ru" target="_blank" rel="noopener noreferrer">sibintek.ru</a></div>
+          <h3>DevOps / Инженер инфраструктуры</h3>
+          <div class="org muted">ООО «СИБИНТЕК» — Москва · <a href="https://www.sibintek.ru" target="_blank" rel="noopener noreferrer">sibintek.ru</a></div>
 
           <ul>
-            <li>Администрирование серверов Linux: установка, конфигурация, работа с логами и анализ инцидентов.</li>
-            <li>Поддержка доступности сервисов: мониторинг, диагностика и оперативное устранение проблем.</li>
-            <li>Контейнеризация и оркестрация: запуск и сопровождение приложений в Docker; деплой через Kubernetes/Helm.</li>
-            <li>Настройка веб-слоя: Nginx — проксирование и базовые настройки безопасности.</li>
-            <li>Базы данных: PostgreSQL — резервное копирование, восстановление, управление пользователями.</li>
-            <li>Мониторинг и оповещения: Prometheus, Grafana — сбор метрик, дашборды, алерты.</li>
-            <li>Автоматизация: Bash-скрипты, Ansible — задачи бэкапа, обновлений и рутинной работы.</li>
-            <li>Документирование инфраструктуры и взаимодействие с командами разработки.</li>
+            <li>Поддержка и развитие инфраструктуры на <strong>Kubernetes</strong>: развертывание приложений с помощью <strong>Helm</strong>, мониторинг состояния кластера.</li>
+            <li>Сборка и управление Docker-образами для различных сервисов компании.</li>
+            <li>Настройка и поддержка CI/CD пайплайнов в <strong>GitLab CI</strong> для автоматизации тестирования и деплоя.</li>
+            <li>Администрирование серверов на <strong>Linux</strong>: оптимизация производительности, обеспечение безопасности, обработка инцидентов.</li>
+            <li>Настройка <strong>Nginx</strong> в качестве reverse proxy и балансировщика нагрузки.</li>
+            <li>Обеспечение отказоустойчивости баз данных: настройка репликации, регулярное бэкапирование и восстановление <strong>PostgreSQL</strong>.</li>
+            <li>Развертывание и настройка стека мониторинга на основе <strong>Prometheus</strong> и <strong>Grafana</strong>; создание дашбордов и алертов.</li>
+            <li>Автоматизация рутинных задач с помощью <strong>Bash-скриптов</strong> и <strong>Ansible</strong>.</li>
+            <li>Работа над проектами по переводу legacy-инфраструктуры в контейнеризированный вид.</li>
           </ul>
         </article>
       </div>
@@ -255,19 +258,20 @@
       <section class="section fade-up" style="transition-delay:.08s">
         <h2>Образование</h2>
         <div class="muted">
-          <p><strong>Неоконченное высшее — 2026</strong></p>
+          <p><strong>Неоконченное высшее (бакалавриат)</strong></p>
           <p>Национальный исследовательский технологический университет «МИСиС», Москва</p>
           <p>Институт компьютерных наук, Прикладная информатика</p>
+          <p><strong>Ожидаемый год окончания: 2026</strong></p>
         </div>
       </section>
 
       <section class="section fade-up" style="transition-delay:.09s">
-        <h2>Дополнительно</h2>
-        <p class="muted">Готовность: полная занятость, удаленная работа. Желаемая должность: DevOps-инженер. Опыт работы: 1 год. Место проживания: Москва. Резюме обновлено 1 сентября 2025 в 20:44.</p>
+        <h2>Дополнительная информация</h2>
+        <p class="muted">Ищу возможности для профессионального роста в области DevOps. Готов к удаленной работе и полной занятости. Желаемая должность: DevOps-инженер.</p>
       </section>
 
       <div class="footer fade-up" style="transition-delay:.1s">
-        <div class="muted">Навыки: Linux · Bash · PostgreSQL · Docker · Kubernetes · Helm · Nginx · Prometheus · Grafana · TCP/IP · Ansible · Git</div>
+        <div class="muted">Обновлено: сентябрь 2025</div>
         <div class="muted">© Жданов Александр</div>
       </div>
     </main>
